# pyapp-window

./: README.md  changelog.md  pyproject.toml
pyapp_window/: __init__.py  __main__.py  backend.py  launcher.py  opener.py  process.py  util.py  utils.py
pyapp_window/webview_window/: __init__.py  api.py  util.py
pyapp_window/webview_window/backend_implementations/: _base.py  chrome_appmode.py  pywebview.py  toga.py  webbrowser.py  wxpython.py
test/: open_terminal.py
