[project]
name = "pyapp-window"
version = "2.1.3"
description = "Launching URL with native window in WebView mode."
license = "MIT"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
readme = "README.md"
packages = [{ include = "pyapp_window" }]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/likianta/depsland"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^1.0.1"
lk-logger = "^6.0.6"
lk-utils = "^3.2.1"
# psutil = "*"
# pythonnet = { version = "^3.0.5", platform = "win32", python = ">=3.12,<3.14" }  # <- toga
requests = "^2.32.3"
toga = [
    { version = "^0.4.7", platform = "!=linux", python = ">=3.9,<3.14" },
    { version = "<0.4.7", platform = "!=linux", python = ">=3.8,<3.9" },
]
# webui2 = [
#     { version = "^2.4.5", platform = "darwin" },
#     { version = "^2.4.5", platform = "linux" },
# ]
webui2 = { version = "^2.5.4", platform = "!=win32" }

# --- toga dependencies
cffi = { version = "^1.17.1", platform = "win32" }  # <- pythonnet
# pygobject = [
#     { version = "<3.50.0", platform = "!=linux", python = "<3.9" },
#     { version = "^3.50.0", platform = "!=linux", python = ">=3.9,<4.0" },
# ]
pythonnet = { version = "^3.0.5", platform = "win32", python = "<3.14" }

[tool.poetry.group.dev.dependencies]
pyinstrument = "^5.0.0"
# pywebview = { version = "^5.3.2", platform = "win32", python = ">=3.8,<3.13" }
pywebview = "^5.3.2"
webui2 = "^2.5.4"  # https://github.com/webui-dev/python-webui
wxpython = "^4.2.2"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
